--- a/_config.yml
+++ b/_config.yml
@@ -1,34 +1,35 @@
-title: My personal blog - Adam Neilson
-email: your-email@domain.com
+title: Patrick McDavid's Blog
+email: pmcdavid@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Patrick McDavid is a technology leader in Colorado. I speak about serverless computing,
+  team building, devops, and leadership development.
 permalink: ':title/'
-baseurl: "/adam-blog" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://patrickmcdavid.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
-author: Adam Neilson # add your name
-author-pic: adam-face.jpg
-about-author: My name is Adam Neilson. I’m a full-time adventure travel blogger and photographer who’s been exploring the world for over 2 years.
+author: Patrick McDavid
+author-pic: patrick_mcdavid_headshot.jpg
+about-author: >
+ My name is Patrick McDavid. I'm the VP of Technology at BombBomb, changing how people communicate with simple videos.
+ I like chasing my kids around outside.
 
 # Contact links
-email: # Add your Email address
-phone: # Add your Phone number
-website: # Add your website, do not add http://
-linkedin: # Add your Linkedin handle
-github: artemsheludko # Add your Github handle
-twitter: '@artemsheludko_' # Add your Twitter handle
-facebook: # Add your Facebook handle
-instagram: # Add your Instagram handle
-pinterest: # Add your Pinterest handle
+email: pmcdavid@gmail.com
+phone: 719.338.1231
+website: patrickmcdavid.com
+linkedin: pmcdavid
+github: ehippy
+twitter: '@ehippy'
+facebook: patrick.mcdavid
+instagram: ehippy
+pinterest: ehippy
 
 # Newsletter
-mailchimp: # Add your MailChimp form identifier.
+mailchimp: bd536d4df7
 
 # Disqus
-discus_identifier: mr-brown # Add your discus identifier
+discus_identifier: patrickmcdavid
 
 # Tracker
 analytics: # Google Analytics
@@ -39,7 +40,7 @@ paginate_path: /page:num/
 
 # Build settings
 markdown: kramdown
-gems:
+plugins:
   - jekyll-paginate
   - jekyll-feed
   - jekyll-sitemap
