--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ instagram: ehippy
 pinterest: ehippy
 
 # Newsletter
-mailchimp: bd536d4df7
+mailchimp: eepurl.com/dcpl-9
 
 # Disqus
 discus_identifier: patrickmcdavid
