--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Patrick McDavid's Blog
+title: Patrick McDavid
 email: pmcdavid@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Patrick McDavid is a technology leader in Colorado. I speak about serverless computing,
