--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "https://patrickmcdavid.com" # the base hostname & protocol for your site, 
 author: Patrick McDavid
 author-pic: patrick_mcdavid_headshot.jpg
 about-author: >
- My name is Patrick McDavid. I'm the VP of Technology at BombBomb. We're changing how people communicate with simple videos.
+ My name is Patrick McDavid. I'm the CTO at BombBomb. We're changing how people communicate with simple videos.
  I like chasing my kids around outside, talking and tinkering with tech.
 
 # Contact links
