--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: 하늘고래의 개발 일지
 email: jun.gamedev@gmail.com
 description: skywhale's personal blog to share what he has learned.
 permalink: ':title/'
-baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: https://skywhale22.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: https://skywhale22.github.io # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
 author: Junyoung Kim # add your name
@@ -31,7 +31,7 @@ discus_identifier: skywhale22-github-io # Add your discus identifier
 analytics: # Google Analytics
 
 # Paginate
-paginate: 12
+paginate: 6
 paginate_path: /page:num/
 
 # Build settings
