--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Vision ML
 email: b314050@iiit-bh.ac.in
 description: > # this means to ignore newlines until "baseurl:".
 permalink: ':title/'
-baseurl: "/visionml-blog" # the subpath of your site, e.g. /blog
-url: "http://github.io" # the base hostname & protocol for your site, e.g. http://example.com
+# baseurl: "/visionml-blo" # the subpath of your site, e.g. /blog
+url: "http://visionml-blog.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
 author: Vision ML Team # add your name
