--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,12 @@
 title: Vision ML
 email: b314050@iiit-bh.ac.in
 description: > # this means to ignore newlines until "baseurl:".
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description. 
 permalink: ':title/'
-# baseurl: "/visionml-blo" # the subpath of your site, e.g. /blog
-url: "https://visionml-blog.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://visionmlblog.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
 author: Vision ML Team # add your name
