--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My personal blog - Adam Neilson
+title: My coding study - 5New
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
