--- a/adam-blog-master/_config.yml
+++ b/adam-blog-master/_config.yml
@@ -1,5 +1,4 @@
-title: My personal blog - Adam Neilson
-email: your-email@domain.com
+title: My coding study - 5New
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
