--- a/adam-blog-master/_config.yml
+++ b/adam-blog-master/_config.yml
@@ -4,8 +4,8 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/adam-blog" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/yuohn" # the subpath of your site, e.g. /blog
+url: "https://github.com/yuohn/yuohn.github.io.git" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
 author: Adam Neilson # add your name
