--- a/adam-blog-master/_config.yml
+++ b/adam-blog-master/_config.yml
@@ -8,7 +8,7 @@ baseurl: "/yuohn" # the subpath of your site, e.g. /blog
 url: "https://github.com/yuohn/yuohn.github.io.git" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Author settings
-author: Adam Neilson # add your name
+author: 5new # add your name
 author-pic: adam-face.jpg
 about-author: My name is Adam Neilson. I’m a full-time adventure travel blogger and photographer who’s been exploring the world for over 2 years.
 
