--- a/adam-blog-master/_config.yml
+++ b/adam-blog-master/_config.yml
@@ -10,7 +10,7 @@ url: "https://github.com/yuohn/yuohn.github.io.git" # the base hostname & protoc
 # Author settings
 author: 5new # add your name
 author-pic: adam-face.jpg
-about-author: My name is Adam Neilson. I’m a full-time adventure travel blogger and photographer who’s been exploring the world for over 2 years.
+about-author: My name is 5New. I’m a student studying coding.
 
 # Contact links
 email: # Add your Email address
